--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-*{
+* {
   padding: 0;
   margin: 0;
 }
@@ -6,3 +6,43 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background: repeating-linear-gradient(
+      45deg,
+      #1a1a1a,
+      #1a1a1a 10px,
+      #252525 10px,
+      #252525 20px
+    ),
+    radial-gradient(circle at 30% 0%, rgba(255, 0, 0, 0.8) 0%, transparent 60%),
+    radial-gradient(
+      circle at 70% 100%,
+      rgba(153, 0, 0, 0.8) 0%,
+      transparent 60%
+    ),
+    #1a1a1a;
+  background-blend-mode: overlay, normal, normal, normal;
+  min-height: 100vh;
+  margin: 0;
+  background-size: cover;
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3); /* Semi-transparent black overlay */
+  z-index: -1;
+}
+
+::-webkit-scrollbar {
+  width: 0; /* Remove scrollbar space */
+  background: transparent; /* Optional: just make scrollbar invisible */
+}
+::-webkit-scrollbar-thumb {
+  background: #ff0000;
+}
